# conan-monorepo

hello/: conanfile.py
hello/project/: CMakeLists.txt
hello/project/a/include/hello/: a.h
hello/project/a/src/: a.cpp
hello/project/b/include/hello/: b.h
hello/project/b/src/: b.cpp
superbuild/: CMakeLists.txt  conanfile.txt
superbuild/configs/: hello-config.cmake  world-config.cmake
world/: conanfile.py
world/project/: CMakeLists.txt
world/project/a/include/world/: a.h
world/project/a/src/: a.cpp
world/project/b/include/world/: b.h
world/project/b/src/: b.cpp
